--- a/style.css
+++ b/style.css
@@ -6,36 +6,57 @@
 }
 body {
   background-image: url("/images/background.jpg");
-
   max-width: 700px;
   margin: 0 auto;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.521);
+}
+.toggled {
+  background: aliceblue;
 }
 h1 {
   font-size: 52px;
   text-align: center;
+}
+[data-sizeText] {
+  text-align: center;
+  background-color: aliceblue;
+  border-radius: 3rem;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.521);
+  margin-bottom: 4px;
 }
 .area-title {
   font-family: "Roboto Flex", sans-serif;
 
   background-color: rgb(129, 119, 119);
   color: antiquewhite;
+  border-bottom: 1px solid rgba(53, 46, 46, 0.548);
 }
 .container {
   display: flex;
-  background-color: rgb(129, 119, 119);
+  background-color: rgb(199, 212, 223);
   /* outline: 1px solid black; */
-  box-shadow: 3px 3px rgba(0, 0, 0, 0.616);
+}
+#color {
+  outline: none;
+  appearance: none;
+  /* box-sizing: border-box; */
+  padding: 50%;
+  background: black;
+  /* width: 50px; */
+  /* height: 50px; */
+  border-radius: 100%;
+  -webkit-appearance: none;
 }
 .area-tools {
   user-select: none;
 
-  flex-grow: 2;
+  flex-grow: 1;
   flex-wrap: wrap;
   display: flex;
+  padding-top: 5px;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  outline: 1px solid green;
 }
 button {
   padding: 1rem;
@@ -45,15 +66,35 @@ button {
   font-size: large;
   box-shadow: 2px 5px 20px rgba(3, 2, 2, 0.658);
 }
+button:hover {
+  zoom: 105%;
+}
+#color:hover {
+  zoom: 105%;
+}
+#gridSize {
+  -webkit-appearance: none;
+  box-shadow: 2px 5px 20px rgba(3, 2, 2, 0.658);
+
+  appearance: none;
+  width: 100%;
+  height: 30px;
+  background: rgba(128, 128, 128, 0.61);
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
+  transition: opacity 0.2s;
+}
+#gridSize:hover {
+  opacity: 1;
+}
 .area-sketch {
   flex-shrink: 0;
+  flex-wrap: nowrap;
   cursor: crosshair;
   background-color: aliceblue;
-  box-shadow: 2px 2px rgba(0, 0, 0, 0.288);
-  outline: 1px solid grey;
+  box-shadow: -2px 0px 0px 0px black;
   display: grid;
-  /* flex-shrink: 0; */
-  /* flex-wrap: wrap; */
   width: 450px;
   height: 450px;
   grid-template-columns: repeat(4, 1fr);
@@ -71,7 +112,7 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    gap: 1px;
+    gap: 12px;
   }
   .container {
     gap: 1rem;
