--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("/images/background.jpg");
+  background-image: url("../images/background.jpg");
   max-width: 700px;
   margin: 0 auto;
   box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.521);
